refactor(backend): Cleaned code based on linting