@@ -2,13 +2,14 @@ package com.example.sirh_backend.mappers;
 
 import com.example.sirh_backend.dtos.FeedbackDTO;
 import com.example.sirh_backend.models.entities.Feedback;
-import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
-@Component
 public class FeedbackMapper {
+
+    private FeedbackMapper() {
+        throw new IllegalStateException("Utility class");
+    }
 
     public static FeedbackDTO toDTO(Feedback feedback) {
         if (feedback != null) {
@@ -25,6 +26,6 @@ public class FeedbackMapper {
     public static List<FeedbackDTO> toDTO(List<Feedback> feedbacks) {
         return feedbacks.stream()
                 .map(FeedbackMapper::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
