@@ -3,13 +3,14 @@ package com.example.sirh_backend.mappers;
 import com.example.sirh_backend.dtos.TrainingDTO;
 import com.example.sirh_backend.models.entities.Skill;
 import com.example.sirh_backend.models.entities.Training;
-import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
-@Component
 public class TrainingMapper {
+
+    private TrainingMapper() {
+        throw new IllegalStateException("Utility class");
+    }
 
     public static TrainingDTO toDTO(Training training) {
         if (training != null) {
@@ -17,7 +18,7 @@ public class TrainingMapper {
                     training.getId(),
                     training.getName(),
                     training.getDescription(),
-                    training.getSkills() != null ? training.getSkills().stream().map(Skill::getId).collect(Collectors.toList()) : List.of()
+                    training.getSkills() != null ? training.getSkills().stream().map(Skill::getId).toList() : List.of()
             );
         }
         return null;
@@ -26,6 +27,6 @@ public class TrainingMapper {
     public static List<TrainingDTO> toDTO(List<Training> trainings) {
         return trainings.stream()
                 .map(TrainingMapper::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
