@@ -2,13 +2,14 @@ package com.example.sirh_backend.mappers;
 
 import com.example.sirh_backend.dtos.TrainingRequestDTO;
 import com.example.sirh_backend.models.entities.TrainingRequest;
-import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
-@Component
 public class TrainingRequestMapper {
+
+    private TrainingRequestMapper() {
+        throw new IllegalStateException("Utility class");
+    }
 
     public static TrainingRequestDTO toDTO(TrainingRequest trainingRequest) {
         if (trainingRequest != null) {
@@ -26,6 +27,6 @@ public class TrainingRequestMapper {
     public static List<TrainingRequestDTO> toDTO(List<TrainingRequest> trainingRequests) {
         return trainingRequests.stream()
                 .map(TrainingRequestMapper::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
